# ov-in-bielefeld

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  cache.py  database.py  docker-compose.yml  log_setup.py  main.py  orchestrator.py  pyproject.toml  ratings_client.py  scheduler.py  settings.py  telegram_bot.py  tmdb_client.py  webapp.py
.github/workflows/: python-app.yml
scrapers/: arthouse.py  cinemaxx.py
static/: style.css
templates/: 404.html  base.html  film_detail.html  index.html
tests/: conftest.py  test_arthouse.py  test_cache.py  test_cinemaxx.py  test_database.py  test_optional_config.py  test_orchestrator.py  test_orchestrator_ratings.py  test_ratings_client.py  test_scraper_mocked.py  test_settings.py  test_telegram_bot.py  test_tmdb_client.py  test_webapp.py  test_webapp_helpers.py
tests/fixtures/: Programm_Lichtwerk_und_Kamera.html.xz
