[project]
name = "ov-in-bielefeld"
version = "0.1.0"
description = "Small website to show upcoming movies in either French or English in Bielefeld."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apscheduler>=3.11.2",
    "brotli>=1.1.0",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.135.1",
    "jinja2>=3.1.6",
    "lxml>=6.0.2",
    "python-dotenv>=1.2.2",
"requests>=2.32.5",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
