[project]
name = "ov-in-bielefeld"
version = "0.1.0"
description = "Small website to show upcoming movies in either French or English in Bielefeld."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apscheduler>=3.11.2",
    "brotli>=1.1.0",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.135.1",
    "jinja2>=3.1.6",
    "lxml>=6.0.2",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mypy>=1.0.1",
    "pytest-ruff>=0.5",
    "types-requests>=2.32.4.20260107",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--ruff --mypy --cov --cov-branch --cov-report=term-missing"

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "main.py", "scheduler.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.isort]
line_length = 132
multi_line_output = 3
force_single_line = false
balanced_wrapping = true
include_trailing_comma = true

[tool.black]
line-length = 132
exclude = "tests/fixtures"

[tool.ruff]
line-length = 132

[tool.ruff.lint]
extend-select = ["E", "F", "UP", "B", "SIM", "I", "FAST", "S", "ANN", "ASYNC", "BLE", "A", "COM818", "C4", "EM", "EXE",
                 "FA", "FIX", "ISC", "ICN", "LOG", "G", "PIE", "T20", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "TID", "N", "PERF", "W", "PGH", "PL", "FURB", "RUF"]
extend-ignore = ["PERF203", "PLR2004", "PLR0911", "PLR0912", "PLR0913", "PLR0915", "PLW0603", "FURB171", "RUF001", "RUF002"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "ANN", "SLF", "PL", "RUF"]
# T201: print() calls in __main__ blocks are intentional diagnostic entry points
"orchestrator.py" = ["T201"]
"scrapers/arthouse.py" = ["T201"]
"scrapers/cinemaxx.py" = ["T201"]

[tool.mypy]
exclude = "tests/fixtures/"

[[tool.mypy.overrides]]
module = ["brotli", "apscheduler.*"]
ignore_missing_imports = true
